syntax = "proto3";

package go.micro.srv.GetUserInfo;

service Example {
	rpc GetUserInfo(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	int64 UserId = 3;
	string Name = 4;
	string Mobile = 5;
	string Real_name = 6;
	string Id_card = 7;
	string Avatar_url = 8;
}
