syntax = "proto3";

package go.micro.srv.User;

service Example {
	rpc GetCaptcha(GetCaptchaRequest) returns (GetCaptchaResponse) {}
	rpc GetSmsCaptcha(GetSmsCaptchaRequest) returns (GetSmsCaptchaResponse) {}
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc Logout(LogoutRequest) returns (LogoutResponse) {}
	rpc Info(InfoRequest) returns (InfoResponse) {}
	rpc Avatar(AvatarRequest) returns (AvatarResponse) {}
	rpc UpdateUserName(UpdateUserNameRequest) returns (UpdateUserNameResponse) {}
	rpc Auth(AuthRequest) returns (AuthResponse) {}
}

message Message {
	string say = 1;
}

message GetCaptchaRequest {
	string Uuid = 1;
}

message GetCaptchaResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Pix = 3;
	int64 Stride = 4;
	message Point {
		int64 X = 1;
		int64 Y = 2;
	}
	Point Min = 5;
	Point Max = 6;
}

message GetSmsCaptchaRequest {
	string Uuid = 1;
	string Mobile = 2;
	string Captcha = 3;
}

message GetSmsCaptchaResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
}

message RegisterRequest {
	string Mobile = 1;
	string Password = 2;
	string SmsCaptcha = 3;
}

message RegisterResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
	string SessionId = 3;
}

message LoginRequest {
	string Mobile = 1;
	string Password = 2;
}

message LoginResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
	string SessionId = 3;
}

message LogoutRequest {
	string SessionId = 1;
}

message LogoutResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
}

message InfoRequest {
	string SessionId = 1;
}

message InfoResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Data = 3;
}

message AvatarRequest {
	string SessionId = 1;
	bytes Data = 2;
	int64 FileSize = 3;
	string FileName = 4;
}

message AvatarResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
}

message UpdateUserNameRequest {
	string SessionId = 1;
	string UserName = 2;
}

message UpdateUserNameResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
}

message AuthRequest {
	string SessionId = 1;
	string RealName = 2;
	string IdCard = 3;
}

message AuthResponse {
	string ErrCode = 1;
	string ErrMsg = 2;
}
